--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@vueuse/core": "10.2.1",
     "@vueuse/integrations": "10.2.1",
     "axios": "1.4.0",
+    "browserslist": "^4.22.2",
+    "caniuse-lite": "^1.0.30001572",
     "dayjs": "^1.11.9",
     "mitt": "^3.0.1",
     "pinia": "^2.1.3",
